0032314: Data Exchange - Reading corrupted STEP files crashes

RWAxis2Placement3d:
 fixed problem with reading parameters ( if sub-entity invalid, set has-parameter to false )